--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8062
 
-spring.datasource.url=jdbc:mysql://localhost:3310/db_pockafka?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://pockafka-mysql:3310/db_pockafka?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=pockafka-user
 spring.datasource.password=5x7jG9M_/.gh956
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Kafka Properties
-com.dimsoft.pockafka.bootstrap-servers: localhost:9092
+com.dimsoft.pockafka.bootstrap-servers: broker:9092
 logging.level.org.apache.kafka = WARN
 
 spring.mail.host=127.0.0.1
