Changed application.properties to set correctly mailslurper

--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 com.dimsoft.pockafka.bootstrap-servers: broker:9092
 logging.level.org.apache.kafka = WARN
 
-spring.mail.host=127.0.0.1
+spring.mail.host=mailslurper
 spring.mail.port=2500
 spring.mail.username=test@test.com
 spring.mail.password=
