--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Kafka Properties
-com.dimsoft.pockafka.bootstrap-servers: localhost:9092
+com.dimsoft.pockafka.bootstrap-servers: kafka:9092
 logging.level.org.apache.kafka = WARN
 
-spring.mail.host=localhost
+spring.mail.host=mailslurper
 spring.mail.port=2500
 spring.mail.username=test@test.com
 spring.mail.password=
@@ -23,4 +23,4 @@ spring.mail.properties.mail.smtp.connectiontimeout=30000
 spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=30000
 
-registry.url=http://localhost:8081
+registry.url=http://schema-registry:8081
