Update on docker-compose and application.properties

--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.mail.properties.mail.smtp.connectiontimeout=30000
 spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=30000
 
-registry.url=http://schema-registry:8081
+registry.url=http://localhost:8081
