--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     image: confluentinc/cp-kafka
     volumes:
       - kafka-data:/var/lib/kafka/data:Z
+    depends_on:
+      - zookeeper
     environment:
       KAFKA_BROKER_ID: '0'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
