--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       - kafka
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka:9092'
+      SCHEMA_REGISTRY_KAFKASTORE_INIT_TIMEOUT_MS: '180000'
+      SCHEMA_REGISTRY_KAFKASTORE_TIMEOUT_MS: '60000'
       SCHEMA_REGISTRY_HOST_NAME: 'schema-registry'
       SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:8081'
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: 'INFO'
