--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -1,28 +1,22 @@
 ---
 version: '3.6'
-
-volumes:
-  zookeeper-data:
-    driver: local
-  zookeeper-log:
-    driver: local
-  kafka-data:
-    driver: local
     
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper
     volumes:
-      - zookeeper-data:/var/lib/zookeeper/data:Z
-      - zookeeper-log:/var/lib/zookeeper/log:Z
+      - /home/nmaxime/pocs/data/zookeeper/data:/var/lib/zookeeper/data
+      - /home/nmaxime/pocs/data/zookeeper/log:/var/lib/zookeeper/log
     environment:
       ZOOKEEPER_CLIENT_PORT: '2181'
       ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
+    ports:
+      - "2181:2181"
 
   kafka:
     image: confluentinc/cp-kafka
     volumes:
-      - kafka-data:/var/lib/kafka/data:Z
+      - /home/nmaxime/pocs/data/kafka/data:/var/lib/kafka/data
     depends_on:
       - zookeeper
     environment:
@@ -80,45 +74,6 @@ services:
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
-
-  test-data:
-    image: gradle:6.3-jdk11
-    command: "gradle --no-daemon testInjectData"
-    working_dir: /app
-    volumes:
-      - ./:/app:z
-    links:
-      - kafka
-      - schema-registry
-
-  kafkacat:
-    image: confluentinc/cp-kafkacat
-    depends_on:
-      - kafka
-    command:
-      - bash
-      - -c
-      - |
-        kafkacat -P -b kafka:9092 -t json << EOF
-        {"_id":"5c4b2b45ab234c86955f0802","index":0,"guid":"d3637b06-9940-4958-9f82-639001c14c34"}
-        {"_id":"5c4b2b459ffa9bb0c0c249e1","index":1,"guid":"08612fb5-40a7-45e5-9ff2-beb89a1b2835"}
-        {"_id":"5c4b2b4545d7cbc7bf8b6e3e","index":2,"guid":"4880280a-cf8b-4884-881e-7b64ebf2afd0"}
-        {"_id":"5c4b2b45dab381e6b3024c6d","index":3,"guid":"36d04c26-0dae-4a8e-a66e-bde9b3b6a745"}
-        {"_id":"5c4b2b45d1103ce30dfe1947","index":4,"guid":"14d53f2c-def3-406f-9dfb-c29963fdc37e"}
-        {"_id":"5c4b2b45d6d3b5c51d3dacb7","index":5,"guid":"a20cfc3a-934a-4b93-9a03-008ec651b5a4"}
-        EOF
-
-        kafkacat -P -b kafka:9092 -t csv << EOF
-        1,Sauncho,Attfield,sattfield0@netlog.com,Male,221.119.13.246
-        2,Luci,Harp,lharp1@wufoo.com,Female,161.14.184.150
-        3,Hanna,McQuillan,hmcquillan2@mozilla.com,Female,214.67.74.80
-        4,Melba,Lecky,mlecky3@uiuc.edu,Female,158.112.18.189
-        5,Mordecai,Hurdiss,mhurdiss4@rambler.ru,Male,175.123.45.143
-        EOF
-
-        kafkacat -b kafka:9092 -o beginning -G json-consumer json
-    links:
-      - kafka
 
   akhq:
     image: tchiotludo/akhq
