--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     depends_on:
       - kafka
     environment:
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka:9092'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
       SCHEMA_REGISTRY_KAFKASTORE_INIT_TIMEOUT_MS: '180000'
       SCHEMA_REGISTRY_KAFKASTORE_TIMEOUT_MS: '60000'
       SCHEMA_REGISTRY_HOST_NAME: 'schema-registry'
