--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -33,6 +33,9 @@ services:
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
       KAFKA_AUTHORIZER_CLASS_NAME: 'kafka.security.auth.SimpleAclAuthorizer'
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 99048576
+      KAFKA_PRODUCER_MAX_REQUEST_SIZE: 99048576
+      KAFKA_CONSUMER_MAX_PARTITION_FETCH_BYTES: 99048576
     links:
       - zookeeper
 
@@ -73,6 +76,8 @@ services:
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: '1'
+      CONNECT_PRODUCER_MAX_REQUEST_SIZE: 99048576
+      CONNECT_CONSUMER_MAX_PARTITION_FETCH_BYTES: 99048576
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
 
   akhq:
