--- a/deployment/docker/docker-compose.debug.yml
+++ b/deployment/docker/docker-compose.debug.yml
@@ -8,10 +8,10 @@ services:
       - /home/nmaxime/pocs/data/zookeeper/data:/var/lib/zookeeper/data
       - /home/nmaxime/pocs/data/zookeeper/log:/var/lib/zookeeper/log
     environment:
-      ZOOKEEPER_CLIENT_PORT: '2181'
+      ZOOKEEPER_CLIENT_PORT: '2281'
       ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
     ports:
-      - "2181:2181"
+      - "2281:2281"
 
   kafka:
     image: confluentinc/cp-kafka
@@ -21,13 +21,13 @@ services:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: '0'
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2281'
       KAFKA_NUM_PARTITIONS: '12'
       KAFKA_COMPRESSION_TYPE: 'gzip'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: '1'
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: '1'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9095'
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
       KAFKA_JMX_PORT: '9091'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
@@ -44,11 +44,11 @@ services:
     depends_on:
       - kafka
     environment:
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9095'
       SCHEMA_REGISTRY_KAFKASTORE_INIT_TIMEOUT_MS: '180000'
       SCHEMA_REGISTRY_KAFKASTORE_TIMEOUT_MS: '60000'
       SCHEMA_REGISTRY_HOST_NAME: 'schema-registry'
-      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:8081'
+      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:8095'
       SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: 'INFO'
 
   connect:
@@ -57,7 +57,7 @@ services:
       - kafka
       - schema-registry
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: 'kafka:9092'
+      CONNECT_BOOTSTRAP_SERVERS: 'kafka:9095'
       CONNECT_REST_PORT: '8083'
       CONNECT_REST_LISTENERS: 'http://0.0.0.0:8083'
       CONNECT_REST_ADVERTISED_HOST_NAME: 'connect'
@@ -67,10 +67,10 @@ services:
       CONNECT_GROUP_ID: 'kafka-connect'
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: 'true'
       CONNECT_KEY_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8095'
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: 'true'
       CONNECT_VALUE_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8095'
       CONNECT_INTERNAL_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
       CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: '1'
@@ -89,9 +89,9 @@ services:
           connections:
             docker-kafka-server:
               properties:
-                bootstrap.servers: "kafka:9092"
+                bootstrap.servers: "kafka:9095"
               schema-registry:
-                url: "http://schema-registry:8081"
+                url: "http://schema-registry:8095"
               connect:
                 - name: "connect"
                   url: "http://connect:8083"
@@ -130,11 +130,15 @@ services:
       dockerfile: ./Dockerfile
       args:
         JAVA_OPTS: -Xms128M
-        MVN_PROFILE: docker
+        MVN_PROFILE: dockerdebug
     environment:
-      SPRING_PROFILES_ACTIVE: docker
+      SPRING_PROFILES_ACTIVE: dockerdebug
+      CATALINA_OPTS: -agentlib:jdwp=transport=dt_socket,address=*:8058,server=y,suspend=n
     ports:
       - "8062:8062"
+      - "8058:8058"
+    expose:
+      - 8058
   
   mailslurper:
     image: marcopas/docker-mailslurper
