--- a/src/src/main/resources/application-dockerdebug.properties
+++ b/src/src/main/resources/application-dockerdebug.properties
@@ -24,3 +24,5 @@ spring.mail.properties.mail.smtp.timeout=30000
 spring.mail.properties.mail.smtp.writetimeout=30000
 
 registry.url=http://schema-registry:8095
+
+logging.config=classpath:log4j2-dockerdebug.properties
